# sherpa-aggregator

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  rustfmt.toml
eisen-ethers/: Cargo.toml
eisen-ethers/src/: fork.rs  lib.rs
eisen-exchange/: Cargo.toml  README.md
eisen-exchange/src/: lib.rs
eisen-exchange/src/dex/: mod.rs
eisen-exchange/src/dex/integration/: mod.rs  uni_v2.rs  uni_v3.rs
eisen-exchange/subquery/uni_v3/: query-pool-count.graphql  query-pools.graphql  schema.graphql
eisen-exchange/tests/: integration_tests.rs
eisen-exchange/tests/dex/: mod.rs
eisen-exchange/tests/dex/base/: base_swap.rs  mod.rs
eisen-exchange/tests/dex/bera_test/: mod.rs
eisen-solidity-router/: .env.example  .gitignore  .mocharc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .solhint.json  README.md  foundry.toml  package-lock.json  package.json  plopfile.mjs  remappings.txt
eisen-solidity-router/contracts/Errors/: GenericErrors.sol
eisen-solidity-router/contracts/Facets/: UniV2Facet.sol  UniV3Facet.sol
eisen-solidity-router/contracts/Interfaces/: IUni.sol  IWETH9.sol
eisen-solidity-router/contracts/libraries/: BytesLib.sol  Constants.sol  LibAllowList.sol  LibPayments.sol  SafeCastLib.sol  SafeTransferLib.sol  UniERC20.sol  UniV3Path.sol
eisen-solidity-router/lib/safe-tx-cli/: .gitignore  README.md  _client.sh  client.sh  client.sh.bash-completion
eisen-solidity-router/templates/: facet.template.hbs
lib/bindings/: Cargo.toml  build.rs
lib/bindings/contract-abi/: ERC20.json  IUniswapV2Factory.json  IUniswapV2Pair.json  IUniswapV3Factory.json  IUniswapV3Pool.json  UniV2Facet.json  UniV3Facet.json
lib/bindings/src/: erc20.rs  i_uniswap_v2_factory.rs  i_uniswap_v2_pair.rs  i_uniswap_v3_factory.rs  i_uniswap_v3_pool.rs  lib.rs  uni_v2_facet.rs  uni_v3_facet.rs
lib/config/: Cargo.toml
lib/config/chain-config/: base.yaml  bera-test.yaml
lib/config/src/: lib.rs
lib/domain/: Cargo.toml  README.md  build.rs
lib/domain/rpc/: entities.proto
lib/domain/src/: contract.rs  dex_id.rs  general_address.rs  lib.rs  token.rs
lib/domain/src/pool/: finder.rs  mod.rs  uni_v2.rs  uni_v3.rs
lib/domain/src/pool/math/: basic_math.rs  logmath.rs  mod.rs  ray_math.rs  uni2_math.rs  var.rs
lib/domain/src/protobuf/: conversion.rs  conversion_error.rs  mod.rs
