# https://doc.rust-lang.org/cargo/reference/workspaces.html#the-workspace-section
[workspace]
members = ["eisen-exchange", "eisen-ethers"]
resolver = "2"

[workspace.dependencies]

## evm
ethers = { git = "https://github.com/gakonst/ethers-rs", features = [
    "ws",
    "rustls",
], default-features = false }
foundry-utils = { git = "https://github.com/foundry-rs/foundry" }
anvil = { git = "https://github.com/foundry-rs/foundry" }

## serde
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0.81", default-features = false }
serde_yaml = { version = "0.9", default-features = false }

## grpc, protobuf
tonic = { version = "0.8.0", features = [
    "transport",
], default-features = false }
tonic-reflection = { version = "0.6.0", default-features = false }
prost = { version = "0.11.0", default-features = false }
prost-types = { version = "0.11.0", default-features = false }
pbjson = { version = "0.5.1", default-features = false }
pbjson-types = { version = "0.5.1", default-features = false }
tower = { version = "0.4", features = ["log"], default-features = false }
tower-http = { version = "0.4", features = ["trace"], default-features = false }

## redis
fred = { version = "6.0.0" }

## async
futures = { version = "0.3.27", default-features = false }
tokio = { version = "1.19.2", features = [
    "macros",
    "rt-multi-thread",
], default-features = false }
async-trait = { version = "0.1.68", default-features = false }
graphql_client = { version = "0.12.0", features = [
    "graphql_query_derive",
], default-features = false }
reqwest = { version = "0.11.16", default-features = false }
governor = { version = "0.6" }

rayon = { version = "1.8" }

## logging
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
tracing-actix-web = "0.7"
tracing-opentelemetry = "0.21.0"
tracing-futures = "0.2.5"
opentelemetry = { version = "0.20", features = ["trace"] }
opentelemetry-stdout = { version = "0.1", features = ["trace"] }
opentelemetry-otlp = { version = "0.13", features = ["default"] }
opentelemetry_api = { version = "0.20", features = ["trace"] }
opentelemetry_sdk = "0.20.0"
actix-web-opentelemetry = { version = "0.15.0" }

actix-web = { version = "4", default-features = false } ## actix
utoipa = { version = "3", features = [
    "actix_extras",
], default-features = false }
utoipa-swagger-ui = { version = "3", features = [
    "actix-web",
], default-features = false }

## misc
strum = { version = "0.24" }
strum_macros = { version = "0.24", default-features = false }
thiserror = { version = "1.0", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
once_cell = { version = "1.16", default-features = false }
itertools = { version = "0.10.5", features = [
    "use_std",
], default-features = false }
uint = { version = "0.9.3", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
hex = { version = "0.4" }
anyhow = { version = "1.0" }
ustr = { version = "0.10" }
rand = { version = "0.8" }

## build dependencies
tonic-build = { version = "0.8", features = [
    "prost",
    "transport",
], default-features = false }
pbjson-build = { version = "0.5.1", default-features = false }
heck = { version = "0.4.1", default-features = false }
glob = { version = "0.3.1", default-features = false }
