[package]
name = "eisen-exchange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
itertools.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
graphql_client.workspace = true
ethers.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
anyhow.workspace = true
once_cell.workspace = true

bindings = { path = "../lib/bindings" }
domain = { path = "../lib/domain" }
config = { path = "../lib/config" }
eisen-ethers = { path = "../eisen-ethers" }

[lib]
path = "src/lib.rs"
