[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
ethers.workspace = true
strum.workspace = true
once_cell.workspace = true
anyhow.workspace = true
rand.workspace = true

domain = { path = "../domain" }

[lib]
path = "src/lib.rs"
