[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers.workspace = true
utoipa.workspace = true
tonic.workspace = true
tonic-reflection.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
lazy_static.workspace = true
itertools.workspace = true
thiserror.workspace = true
uint.workspace = true
rustc-hex.workspace = true
hex.workspace = true
prost.workspace = true
prost-types.workspace = true
pbjson.workspace = true
pbjson-types.workspace = true
anyhow.workspace = true
ustr.workspace = true
bindings = { path = "../bindings" }

[build-dependencies]
tonic-build.workspace = true
pbjson-build.workspace = true


[lib]
path = "src/lib.rs"
